--- a/BE/package.json
+++ b/BE/package.json
@@ -14,11 +14,15 @@
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/jsonwebtoken": "^9.0.1",
+    "@types/nodemailer": "^6.4.7",
     "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
+    "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "googleapis": "^118.0.0",
     "jsonwebtoken": "^9.0.0",
     "mongodb": "^5.3.0",
-    "mongoose": "^7.0.5"
+    "mongoose": "^7.0.5",
+    "nodemailer": "^6.9.1"
   }
 }
