--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "@reduxjs/toolkit": "^1.9.5",
     "@types/jwt-decode": "^3.1.0",
     "axios": "^1.3.6",
+    "faker": "^5.5.3",
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -20,6 +21,7 @@
     "redux-persist": "^6.0.0"
   },
   "devDependencies": {
+    "@types/faker": "^5.5.9",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react": "^3.1.0",
