--- a/BE/package.json
+++ b/BE/package.json
@@ -12,8 +12,10 @@
   "dependencies": {
     "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.13",
+    "@types/ejs": "^3.1.2",
     "@types/express": "^4.17.17",
     "@types/jsonwebtoken": "^9.0.1",
+    "@types/lodash": "^4.14.194",
     "@types/nodemailer": "^6.4.7",
     "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
@@ -21,6 +23,7 @@
     "express": "^4.18.2",
     "googleapis": "^118.0.0",
     "jsonwebtoken": "^9.0.0",
+    "lodash": "^4.17.21",
     "mongodb": "^5.3.0",
     "mongoose": "^7.0.5",
     "nodemailer": "^6.9.1"
