--- a/client/package.json
+++ b/client/package.json
@@ -11,14 +11,21 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.5",
     "@types/jwt-decode": "^3.1.0",
+    "@types/lodash": "^4.14.194",
+    "@types/styled-components": "^5.1.26",
     "axios": "^1.3.6",
+    "chart.js": "^4.3.0",
     "faker": "^5.5.3",
     "jwt-decode": "^3.1.2",
+    "lodash": "^4.17.21",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
+    "react-responsive": "^9.0.2",
     "react-router-dom": "^6.10.0",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    "styled-components": "^5.3.10"
   },
   "devDependencies": {
     "@types/faker": "^5.5.9",
