--- a/BE/package.json
+++ b/BE/package.json
@@ -10,18 +10,22 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/axios": "^0.14.0",
     "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.13",
     "@types/ejs": "^3.1.2",
     "@types/express": "^4.17.17",
+    "@types/got": "^9.6.12",
     "@types/jsonwebtoken": "^9.0.1",
     "@types/lodash": "^4.14.194",
     "@types/nodemailer": "^6.4.7",
+    "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "googleapis": "^118.0.0",
+    "got": "^12.6.0",
     "jsonwebtoken": "^9.0.0",
     "lodash": "^4.17.21",
     "mongodb": "^5.3.0",
